--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Customer Relationship Management</title>
 </head>
 <body>
-    
+    <h1></h1>Coding Challenge 17</h1>
     <script src="cc_17.js"></script>
 </body>
 </html>
